add react classes

--- a/app/redidropper/templates/logs.html
+++ b/app/redidropper/templates/logs.html
@@ -8,5 +8,5 @@
     <div id="admin-events-list">
     	
     </div>
-    <script type="text/jsx" src="{{ url_for('static', filename='js/logs.js') }}"></script>
+    <script type="text/jsx" src="{{ url_for('static', filename='js/logs.jsx') }}"></script>
 {% endblock %}
