--- a/app/redidropper/templates/start_upload.html
+++ b/app/redidropper/templates/start_upload.html
@@ -49,7 +49,7 @@
             id="upload-complete-button" hidden>Select Another Subject</a>
 
 <script type="text/jsx"
-    src="{{ url_for('static', filename='js/start_upload.js') }}"></script>
+    src="{{ url_for('static', filename='js/start_upload.jsx') }}"></script>
 
 <script src="{{ url_for('static', filename='js/start_upload_resumable.js') }}"></script>
 
