--- a/app/redidropper/templates/admin.html
+++ b/app/redidropper/templates/admin.html
@@ -12,5 +12,5 @@
     </div>
 
 	<div>
-    <script  type="text/jsx"  src="{{ url_for('static', filename='js/admin.js') }}"></script>
+    <script  type="text/jsx"  src="{{ url_for('static', filename='js/admin.jsx') }}"></script>
 {% endblock %}
