--- a/app/redidropper/templates/dashboard.html
+++ b/app/redidropper/templates/dashboard.html
@@ -14,6 +14,6 @@
         <!-- used by react -->
         <div id="dashboard"> </div>
 
-    <script type="text/jsx" src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
+    <script type="text/jsx" src="{{ url_for('static', filename='js/dashboard.jsx') }}"></script>
 
 {% endblock %}
