batch download page mostly done

--- a/app/redidropper/static/css/batch_download.css
+++ b/app/redidropper/static/css/batch_download.css
@@ -16,3 +16,11 @@
 #batch-page .panel.active {
     z-index: 10;
 }
+
+#batch-page .batch-form-group {
+    text-align: left;
+}
+
+.batch-input {
+    margin-bottom: 1rem;
+}
