--- a/app/redidropper/static/css/sidebar.css
+++ b/app/redidropper/static/css/sidebar.css
@@ -30,6 +30,28 @@
 
 .sidenav {
     height: 100vh;
+    position: fixed;
+}
+
+.sidenav .rollup {
+    display: none;
+    position: absolute;
+    right: 0;
+    padding: 9px 10px;
+    margin-top: 8px;
+    margin-right: 15px;
+    margin-bottom: 8px;
+    background-color: transparent;
+    background-image: none;
+    border: 1px solid white;
+    border-radius: 4px;
+}
+
+.rollup .icon-bar {
+    border: white;
+    border-radius: 5px;
+    border-style: solid;
+    display: block;
 }
 
 /* Sidebar Styles */
@@ -55,6 +77,10 @@ nav.sidenav {
 @media (max-width: 991px) {
     .sidenav {
         height: auto;
+        position: relative;
+    }
+    .sidenav .rollup {
+        display: initial;
     }
     .sidenav .sidebar-nav {
         position: relative;
