--- a/app/redidropper/static/css/sidebar.css
+++ b/app/redidropper/static/css/sidebar.css
@@ -18,6 +18,10 @@
     text-align: center;
 }
 
+#admin-user-management {
+    overflow: scroll;
+}
+
 .icon-white{
     color: #fff;
 }
@@ -31,6 +35,7 @@
 .sidenav {
     height: 100vh;
     position: fixed;
+    z-index: 10;
 }
 
 .sidenav .rollup {
